[gd_scene load_steps=20 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://tileset_terrain.tres" type="TileSet" id=2]
[ext_resource path="res://scripts/camera_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/menu_play_helper.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/menu_tutorial_helper.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/menu_button_helper.png" type="Texture" id=6]
[ext_resource path="res://scripts/menu.gd" type="Script" id=7]
[ext_resource path="res://scripts/menu_input.gd" type="Script" id=8]
[ext_resource path="res://scripts/player_manager.gd" type="Script" id=9]
[ext_resource path="res://scenes/menu/menu_area.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/settings/technical_settings.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/menu/menu_door.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/feedback.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/particles.tscn" type="PackedScene" id=14]
[ext_resource path="res://scripts/map/menu_fake_map.gd" type="Script" id=15]

[sub_resource type="Animation" id=1]
resource_name = "PreparingPlay"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Helper:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.25, 3, 1.25, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Helper:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "PreparingPlay"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Helper:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.25, 3, 1.25, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Helper:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="Map" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="TileMapTerrain" type="TileMap" parent="Map"]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 35, 0, 1, 35, 0, 2, 35, 0, 3, 35, 0, 12, 36, 0, 13, 36, 0, 14, 36, 0, 15, 36, 0, 65536, 35, 0, 65537, 35, 0, 65538, 35, 0, 65539, 35, 0, 65548, 36, 0, 65549, 36, 0, 65550, 36, 0, 65551, 36, 0, 131072, 35, 0, 131073, 35, 0, 131074, 35, 0, 131075, 35, 0, 131084, 36, 0, 131085, 36, 0, 131086, 36, 0, 131087, 36, 0, 196608, 35, 0, 196609, 35, 0, 196610, 35, 0, 196611, 35, 0, 196620, 36, 0, 196621, 36, 0, 196622, 36, 0, 196623, 36, 0, 262144, 35, 0, 262145, 35, 0, 262146, 35, 0, 262147, 35, 0, 262156, 36, 0, 262157, 36, 0, 262158, 36, 0, 262159, 36, 0 )

[node name="TileMap" type="TileMap" parent="Map"]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -196612, 0, 8, -196611, 0, 10, -196610, 0, 10, -196609, 0, 10, -262144, 0, 10, -262143, 0, 10, -262142, 0, 10, -262141, 0, 10, -262140, 0, 10, -262139, 0, 10, -262138, 0, 10, -262137, 0, 10, -262136, 0, 10, -262135, 0, 10, -262134, 0, 10, -262133, 0, 10, -262132, 0, 10, -262131, 0, 10, -262130, 0, 10, -262129, 0, 10, -262128, 0, 10, -262127, 0, 10, -262126, 0, 10, -262125, 0, 11, -131076, 0, 65544, -131075, 0, 131081, -131074, 0, 131081, -131073, 0, 131081, -196608, 0, 131081, -196607, 0, 131081, -196606, 0, 131081, -196605, 0, 131081, -196604, 0, 131081, -196603, 0, 131081, -196602, 0, 131081, -196601, 0, 131081, -196600, 0, 131081, -196599, 0, 131081, -196598, 0, 131081, -196597, 0, 131081, -196596, 0, 131081, -196595, 0, 131081, -196594, 0, 131081, -196593, 0, 131081, -196592, 0, 131081, -196591, 0, 131081, -196590, 0, 131081, -196589, 0, 131083, -65540, 0, 65544, -65539, 0, 131081, -65538, 0, 131081, -65537, 0, 131081, -131072, 0, 131081, -131071, 0, 131081, -131070, 0, 131081, -131069, 0, 131081, -131068, 0, 131081, -131067, 0, 131081, -131066, 0, 131081, -131065, 0, 131081, -131064, 0, 131081, -131063, 0, 131081, -131062, 0, 131081, -131061, 0, 131081, -131060, 0, 131081, -131059, 0, 131081, -131058, 0, 131081, -131057, 0, 131081, -131056, 0, 131081, -131055, 0, 131081, -131054, 0, 131081, -131053, 0, 131083, -4, 0, 65544, -3, 0, 131081, -2, 0, 131081, -1, 0, 131081, -65536, 0, 131081, -65535, 0, 131081, -65534, 0, 131081, -65533, 0, 131081, -65532, 0, 131081, -65531, 0, 131081, -65530, 0, 131081, -65529, 0, 131081, -65528, 0, 131081, -65527, 0, 131081, -65526, 0, 131081, -65525, 0, 131081, -65524, 0, 131081, -65523, 0, 131081, -65522, 0, 131081, -65521, 0, 131081, -65520, 0, 131081, -65519, 0, 131081, -65518, 0, 131081, -65517, 0, 131083, 65532, 0, 65544, 65533, 0, 131081, 65534, 0, 131081, 65535, 0, 131081, 0, 0, 131078, 1, 0, 196617, 2, 0, 196617, 3, 0, 196617, 4, 0, 196617, 5, 0, 196617, 6, 0, 196617, 7, 0, 196617, 8, 0, 196617, 9, 0, 196617, 10, 0, 196617, 11, 0, 196617, 12, 0, 196617, 13, 0, 196617, 14, 0, 196617, 15, 0, 131077, 16, 0, 131081, 17, 0, 131081, 18, 0, 131081, 19, 0, 131083, 131068, 0, 65544, 131069, 0, 131081, 131070, 0, 131081, 131071, 0, 131081, 65536, 0, 131083, 65551, 0, 65544, 65552, 0, 131081, 65553, 0, 131081, 65554, 0, 131081, 65555, 0, 131083, 196604, 0, 65544, 196605, 0, 131081, 196606, 0, 131081, 196607, 0, 131081, 131072, 0, 131083, 131087, 0, 65544, 131088, 0, 131081, 131089, 0, 131081, 131090, 0, 131081, 131091, 0, 131083, 262140, 0, 65544, 262141, 0, 131081, 262142, 0, 131081, 262143, 0, 131081, 196608, 0, 131083, 196610, 0, 8, 196611, 0, 11, 196614, 0, 196609, 196615, 0, 196610, 196616, 0, 196610, 196617, 0, 196611, 196620, 0, 8, 196621, 0, 11, 196623, 0, 65544, 196624, 0, 131081, 196625, 0, 131081, 196626, 0, 131081, 196627, 0, 131083, 327676, 0, 65544, 327677, 0, 131081, 327678, 0, 131081, 327679, 0, 131081, 262144, 0, 65542, 262145, 0, 10, 262146, 0, 65541, 262147, 0, 65542, 262148, 0, 11, 262155, 0, 8, 262156, 0, 65541, 262157, 0, 65542, 262158, 0, 10, 262159, 0, 65541, 262160, 0, 131081, 262161, 0, 131081, 262162, 0, 131081, 262163, 0, 131083, 393212, 0, 65544, 393213, 0, 131081, 393214, 0, 131081, 393215, 0, 131081, 327680, 0, 131081, 327681, 0, 131081, 327682, 0, 131081, 327683, 0, 131081, 327684, 0, 65542, 327685, 0, 11, 327690, 0, 8, 327691, 0, 65541, 327692, 0, 131081, 327693, 0, 131081, 327694, 0, 131081, 327695, 0, 131081, 327696, 0, 131081, 327697, 0, 131081, 327698, 0, 131081, 327699, 0, 131083, 458748, 0, 65544, 458749, 0, 131081, 458750, 0, 131081, 458751, 0, 131081, 393216, 0, 131081, 393217, 0, 131081, 393218, 0, 131081, 393219, 0, 131081, 393220, 0, 131081, 393221, 0, 65542, 393222, 0, 10, 393223, 0, 10, 393224, 0, 10, 393225, 0, 10, 393226, 0, 65541, 393227, 0, 131081, 393228, 0, 131081, 393229, 0, 131081, 393230, 0, 131081, 393231, 0, 131081, 393232, 0, 131081, 393233, 0, 131081, 393234, 0, 131081, 393235, 0, 131083, 524284, 0, 65544, 524285, 0, 131081, 524286, 0, 131081, 524287, 0, 131081, 458752, 0, 131081, 458753, 0, 131081, 458754, 0, 131081, 458755, 0, 131081, 458756, 0, 131081, 458757, 0, 131081, 458758, 0, 131081, 458759, 0, 131081, 458760, 0, 131081, 458761, 0, 131081, 458762, 0, 131081, 458763, 0, 131081, 458764, 0, 131081, 458765, 0, 131081, 458766, 0, 131081, 458767, 0, 131081, 458768, 0, 131081, 458769, 0, 131081, 458770, 0, 131081, 458771, 0, 131083, 589820, 0, 65544, 589821, 0, 131081, 589822, 0, 131081, 589823, 0, 131081, 524288, 0, 131081, 524289, 0, 131081, 524290, 0, 131081, 524291, 0, 131081, 524292, 0, 131081, 524293, 0, 131081, 524294, 0, 131081, 524295, 0, 131081, 524296, 0, 131081, 524297, 0, 131081, 524298, 0, 131081, 524299, 0, 131081, 524300, 0, 131081, 524301, 0, 131081, 524302, 0, 131081, 524303, 0, 131081, 524304, 0, 131081, 524305, 0, 131081, 524306, 0, 131081, 524307, 0, 131083, 655356, 0, 65544, 655357, 0, 131081, 655358, 0, 131081, 655359, 0, 131081, 589824, 0, 131081, 589825, 0, 131081, 589826, 0, 131081, 589827, 0, 131081, 589828, 0, 131081, 589829, 0, 131081, 589830, 0, 131081, 589831, 0, 131081, 589832, 0, 131081, 589833, 0, 131081, 589834, 0, 131081, 589835, 0, 131081, 589836, 0, 131081, 589837, 0, 131081, 589838, 0, 131081, 589839, 0, 131081, 589840, 0, 131081, 589841, 0, 131081, 589842, 0, 131081, 589843, 0, 131083, 720892, 0, 65544, 720893, 0, 131081, 720894, 0, 131081, 720895, 0, 131081, 655360, 0, 131081, 655361, 0, 131081, 655362, 0, 131081, 655363, 0, 131081, 655364, 0, 131081, 655365, 0, 131081, 655366, 0, 131081, 655367, 0, 131081, 655368, 0, 131081, 655369, 0, 131081, 655370, 0, 131081, 655371, 0, 131081, 655372, 0, 131081, 655373, 0, 131081, 655374, 0, 131081, 655375, 0, 131081, 655376, 0, 131081, 655377, 0, 131081, 655378, 0, 131081, 655379, 0, 131083, 786428, 0, 65544, 786429, 0, 131081, 786430, 0, 131081, 786431, 0, 131081, 720896, 0, 131081, 720897, 0, 131081, 720898, 0, 131081, 720899, 0, 131081, 720900, 0, 131081, 720901, 0, 131081, 720902, 0, 131081, 720903, 0, 131081, 720904, 0, 131081, 720905, 0, 131081, 720906, 0, 131081, 720907, 0, 131081, 720908, 0, 131081, 720909, 0, 131081, 720910, 0, 131081, 720911, 0, 131081, 720912, 0, 131081, 720913, 0, 131081, 720914, 0, 131081, 720915, 0, 131083, 851964, 0, 65544, 851965, 0, 131081, 851966, 0, 131081, 851967, 0, 131081, 786432, 0, 131081, 786433, 0, 131081, 786434, 0, 131081, 786435, 0, 131081, 786436, 0, 131081, 786437, 0, 131081, 786438, 0, 131081, 786439, 0, 131081, 786440, 0, 131081, 786441, 0, 131081, 786442, 0, 131081, 786443, 0, 131081, 786444, 0, 131081, 786445, 0, 131081, 786446, 0, 131081, 786447, 0, 131081, 786448, 0, 131081, 786449, 0, 131081, 786450, 0, 131081, 786451, 0, 131083, 917500, 0, 196616, 917501, 0, 196617, 917502, 0, 196617, 917503, 0, 196617, 851968, 0, 196617, 851969, 0, 196617, 851970, 0, 196617, 851971, 0, 196617, 851972, 0, 196617, 851973, 0, 196617, 851974, 0, 196617, 851975, 0, 196617, 851976, 0, 196617, 851977, 0, 196617, 851978, 0, 196617, 851979, 0, 196617, 851980, 0, 196617, 851981, 0, 196617, 851982, 0, 196617, 851983, 0, 196617, 851984, 0, 196617, 851985, 0, 196617, 851986, 0, 196617, 851987, 0, 196619 )

[node name="BGLayer" type="Node2D" parent="Map"]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -256
limit_top = -256
limit_right = 1280
limit_bottom = 856
limit_smoothed = true
script = ExtResource( 3 )

[node name="ButtonHelper" type="Sprite" parent="."]
position = Vector2( 512, 485 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Input" type="Node" parent="."]
script = ExtResource( 8 )

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource( 9 )
is_menu = true

[node name="Tween" type="Tween" parent="."]

[node name="TutorialArea" parent="." instance=ExtResource( 10 )]

[node name="Helper" type="Sprite" parent="TutorialArea"]
position = Vector2( -103, 114 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="TutorialArea"]
anims/PreparingPlay = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="PlayArea" parent="." instance=ExtResource( 10 )]
position = Vector2( 882, 161 )
type = "play"

[node name="Helper" type="Sprite" parent="PlayArea"]
position = Vector2( -132, 114 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayArea"]
anims/PreparingPlay = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="TechnicalSettings" parent="." instance=ExtResource( 11 )]

[node name="TutorialDoor" parent="." instance=ExtResource( 12 )]

[node name="PlayDoor" parent="." instance=ExtResource( 12 )]
position = Vector2( 769, 60 )

[node name="Feedback" parent="." instance=ExtResource( 13 )]

[node name="Particles" parent="." instance=ExtResource( 14 )]

[node name="Slicer" type="Node" parent="."]

[node name="SoloMode" type="Node" parent="."]
